--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,8 @@
-name = "medium-feed"
 type = "webpack"
-zone_id = ""
 private = false
-account_id = ""
-route = ""
 webpack_config = "webpack.config.js"
+name = "medium-feed"
+workers_dev = true
+
+[vars]
+USERNAME = "ajmeese7"
