--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "medium-feed-json",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Fetch your Medium feed in JSON format using Cloudflare Workers",
   "main": "index.js",
+  "scripts": {
+    "build": "wrangler build",
+    "preview": "wrangler preview --watch",
+    "publish": "wrangler publish"
+  },
   "author": "Alejandro Krumkamp <ale@alekrumkamp.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@cloudflare/wrangler": "^1.21.0"
+  }
 }
