Git hook to build before commit This way the GitHub Action won't need to run the `build` command and I won't have to deal with pesky unstaged changes in the runner.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Fetch your Medium feed in JSON format using Cloudflare Workers",
   "main": "index.js",
   "scripts": {
+    "preinstall": "git config core.hooksPath hooks",
     "build": "wrangler build",
     "preview": "wrangler preview --watch",
     "publish": "wrangler publish"
