Checkout git master branch I am getting the error message `ERR_PNPM_GIT_UNKNOWN_BRANCH` when the `pnpm publish` command runs, so hopefully this will resolve the issue. If not, the next commit will remove git checks, which I am hoping to avoid unless absolutely necessary.

--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -27,6 +27,7 @@ jobs:
 
     - name: Publish to npmjs Package Registry
       run: |
+        git checkout master
         pnpm publish --publish --registry https://registry.npmjs.org/
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
