`.npmignore` for irrelevant files The GitHub Action is also now configured to only run when I manually make a release, to avoid re-releasing every time there is a commit to master.

--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -2,9 +2,8 @@ name: Publish Package on Version Change
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
+  release:
+    types: [published]
 
 jobs:
   publish:
